--- a/tests/Helpers/TestViews/basic.twig
+++ b/tests/Helpers/TestViews/basic.twig
@@ -1,1 +1,1 @@
-<html><body><h1>{{ Model.Header }}</h1><p>{{ Model.Content }}</p></body></html>
+<html><head><title>{{ ViewData.Title }}</title></head><body><h1>{{ Model.Header }}</h1><p>{{ Model.Content }}</p></body></html>
