ViewItemsCollection for view items

--- a/tests/Helpers/TestViews/basic.twig
+++ b/tests/Helpers/TestViews/basic.twig
@@ -1,1 +1,1 @@
-<html><head><title>{{ ViewData.Title }}</title></head><body><h1>{{ Model.Header }}</h1><p>{{ Model.Content }}</p><p>{{ Request.Url }}</p><p>{{ Application.ViewPath }}</p></body></html>
+<html><head><title>{{ ViewItems.Title }}</title></head><body><h1>{{ Model.Header }}</h1><p>{{ Model.Content }}</p><p>{{ Request.Url }}</p><p>{{ Application.ViewPath }}</p></body></html>
